[package]
name = "ddc-hi"
version = "0.7.0"
authors = ["arcnmx"]
build = "build.rs"
edition = "2021"
publish = ["astropad"]

description = "High level DDC/CI monitor control"
keywords = ["ddc", "mccs", "vcp", "vesa"]

documentation = "http://docs.rs/ddc-hi/"
repository = "https://github.com/arcnmx/ddc-hi-rs"
readme = "README.md"
license = "MIT"

# [badges]
# travis-ci = { repository = "arcnmx/ddc-hi-rs" }
# maintenance = { status = "passively-maintained" }

[dependencies]
ddc = "^0.2.0"
astro-edid = { version = "2", registry = "astropad" }
mccs = "^0.2"
mccs-caps = "^0.2"
mccs-db = "^0.2"
log = "^0.4.27"
thiserror = "2"

[target.'cfg(target_os = "linux")'.dependencies]
ddc-i2c = { version = "^0.2.2", features = [
    "with-linux",
    "with-linux-enumerate",
], optional = true }

[target.'cfg(windows)'.dependencies]
ddc-winapi = { version = "0.5", registry = "astropad", optional = true }
nvapi = { version = "^0.1.4", default-features = false, features = [
    "i2c",
], optional = true }
ddc-i2c = { version = "^0.2.2", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
ddc-macos = { version = "^0.2.2", optional = true }

[features]
# These `has-*` cfgs are set by build.rs based on the target platform; declaring
# them here keeps rustc's check-cfg lint happy.
has-ddc-i2c = []
has-ddc-winapi = []
has-nvapi = []
has-ddc-macos = []
default = ["ddc-i2c", "ddc-winapi", "nvapi", "ddc-macos"]
